# anchor

./: README.md  anchor.py  anchor.sh  pyproject.toml
decks/Circle of Fifths/: order_of_flats.back.html  order_of_flats.front.html  order_of_sharps.back.html  order_of_sharps.front.html
decks/Interval Mnemonics/: major_2nd_asc.reversible.back.html  major_2nd_asc.reversible.front.html  major_2nd_desc.reversible.back.html  major_2nd_desc.reversible.front.html  major_3rd_asc.reversible.back.html  major_3rd_asc.reversible.front.html  major_3rd_desc.reversible.back.html  major_3rd_desc.reversible.front.html  major_3rd_harm.reversible.back.html  major_3rd_harm.reversible.front.html  major_6th_asc.reversible.back.html  major_6th_asc.reversible.front.html  major_6th_desc.reversible.front.html  major_7th_asc.reversible.front.html  major_7th_desc.reversible.back.html  major_7th_desc.reversible.front.html  minor_2nd_asc.reversible.back.html  minor_2nd_asc.reversible.front.html  minor_2nd_desc.reversible.back.html  minor_2nd_desc.reversible.front.html  minor_3rd_asc.reversible.back.html  minor_3rd_asc.reversible.front.html  minor_3rd_desc.reversible.front.html  minor_6th_asc.reversible.front.html  minor_6th_desc.reversible.front.html  minor_7th_asc.reversible.back.html  minor_7th_asc.reversible.front.html  minor_7th_desc.reversible.front.html  minor_9th_asc.reversible.back.html  minor_9th_asc.reversible.front.html  minor_9th_desc.reversible.back.html  minor_9th_desc.reversible.front.html  perfect_4th_asc.reversible.front.html  perfect_4th_desc.reversible.front.html  (+8 more)
(+45 files in other folders)
