[tool.poetry]
name = "anchor"
version = "0.1.0"
description = "Collection of anki cards and generator for .apkg"
authors = ["Rudolf M. Schreier <thepadawan3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
genanki = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
